src/test/deca/context/invalid/douDecl_ident_01_so.deca
// Description:
//    Tester la double déclaration de variable
//
// Resultats:
//    La variable est déjà déclarée
//
// Historique:
//    cree le 01/01/2023

{
        int a=0;
        int a=0;
        float a, a;

}